--- a/app/css/reset.scss
+++ b/app/css/reset.scss
@@ -17,9 +17,10 @@ center, u, b, i {
     font-family: inherit;
     vertical-align: baseline
 }
-body {
+html,body {
     line-height: 1;
     background: #f5f5f5;
+    height: 100%;
 }
 :focus {
     outline: 0
@@ -48,6 +49,9 @@ hr {
     color: #000;
     background-color: #000;
     height: 1px
+}
+a {
+    text-decoration: none;
 }
 .router-link-exact-active p {
     color: red !important;
